Hello world to test functionality

--- a/picture-in-picture.html
+++ b/picture-in-picture.html
@@ -1,9 +1,10 @@
   <!DOCTYPE html>
   <html>
     <head>
+        <script src="picture-in-picture.js"></script>
         <link rel="stylesheet" type="text/css" href="picture-in-picture.css">
     </head>
     <body>
-        <script src="picture-in-picture.js"></script>
+        Hello world!!
     </body>
   </html>
