--- a/config/config.html
+++ b/config/config.html
@@ -2,35 +2,36 @@
 <html>
     <head>
         <title>Options for Mini Viewer</title>
-        <link rel="stylesheet" type="text/css" href="config.css">
+        <style>
+            .properly-spaced {
+                height: 25px;
+                padding: 5px;
+            }
+            label {
+                vertical-align: center;
+            }
+        </style>
     </head>
     <body>
         <div id="status"></div>
-
-        <br/>
-
         <div>
-            <label for="default-window-location">Please select a default location</label>
-            <select id="default-window-location">
-                <option value="bottom-right">Bottom right</option>
-                <option value="bottom-left">Bottom left</option>
-                <option value="top-left">Top left</option>
-                <option value="top-right">Top right</option>
-            </select>
-
-            <br />
-
-            <label for="default-window-width">Please enter a default window width in pixels</label>
-            <input id="default-window-width" type="text" style="width: 50px;"/>
-
-            <br />
-
-            <label for="default-window-height">Please enter a default window height in pixels</label>
-            <input id="default-window-height" type="text" style="width: 50px;"/>
-
-            <br />
-            <br />
-
+            <div class="properly-spaced">
+                <label for="default-window-location">Please select a default location</label>
+                <select id="default-window-location" style="float: right;">
+                    <option value="bottom-right">Bottom right</option>
+                    <option value="bottom-left">Bottom left</option>
+                    <option value="top-left">Top left</option>
+                    <option value="top-right">Top right</option>
+                </select>
+            </div>
+            <div class="properly-spaced">
+                <label for="default-window-width">Please enter a default window width in pixels</label>
+                <input id="default-window-width" type="text" style="width: 50px; float: right;"/>
+            </div>
+            <div class="properly-spaced">
+                <label for="default-window-height">Please enter a default window height in pixels</label>
+                <input id="default-window-height" type="text" style="width: 50px; float: right;"/>
+            </div>
             <button type="button" id="save-default-values">Submit</button>
         </div>
     </body>
